style(styles): update SCSS files to use CSS variables for margins and paddings for consistency and maintainability fix(styles): adjust line-height in _reset.scss for better readability feat(styles): add new variable --scroll-bar-difference to handle scrollbar width dynamically

--- a/src/routes/styles/foundation/_reset.scss
+++ b/src/routes/styles/foundation/_reset.scss
@@ -7,10 +7,19 @@
 }
 
 :where(:root) {
-	line-height: 1.5;
+	line-height: 1.6;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-text-size-adjust: 100%;
-	text-size-adjust: 100%; 
+	text-size-adjust: 100%;
+}
+
+html {
+	overflow-wrap: anywhere;
+	word-break: normal;
+	line-break: strict;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	scrollbar-gutter: stable;
 }
 
 img {
