--- a/src/routes/styles/foundation/_variables.scss
+++ b/src/routes/styles/foundation/_variables.scss
@@ -12,4 +12,6 @@
 	/* m: margin */
 	--m-vertical: 24px;
 	--m-horizontal: 16px;
+
+	--scroll-bar-difference: 100vw - 100%;
 }
